--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "wagmi": "^2.19.5"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^25.0.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.23",
+    "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8.5.6",
