--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
-# Copy to .env.local and set values
-DATABASE_URL="file:./dev.db"
-ADMIN_API_KEY="changeme_super_secret_key"
-ETH_RPC="https://rpc.ankr.com/eth"
-SUPABASE_URL="https://your-project.supabase.co"
-SUPABASE_SERVICE_ROLE_KEY="supabase-service-role-key"
+NEXT_PUBLIC_PROPERTY_REGISTRY_ADDRESS=address
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=projectid
